fully functional classifier

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
+# Created by https://www.toptal.com/developers/gitignore/api/direnv
+# Edit at https://www.toptal.com/developers/gitignore?templates=direnv
+
+### direnv ###
+.direnv
+.envrc
+
+# End of https://www.toptal.com/developers/gitignore/api/direnv
+
 # nix build default output
 result
+result-*
